# ap2-iso20022

./: README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-inspect.yml  publish-mcp.yml  release.yml
ap2_iso20022/: __init__.py  bridge.py  server.py
tests/: test_bridge.py  test_server.py
