[tool.poetry]
name = "ap2-iso20022"
version = "0.0.1"
description = "Bridge AP2 (Agent Payments Protocol) and x402 agent-payment mandates into wire-valid ISO 20022 pain.001 / pacs.008 records, with spending-cap, expiry and authorisation guardrails. Includes an MCP server."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/ap2-iso20022"
homepage = "https://ap2-iso20022.com"
keywords = [
    "iso-20022",
    "ap2",
    "x402",
    "agent-payments",
    "pain001",
    "pacs008",
    "mcp",
    "fintech",
]
packages = [
    { include = "ap2_iso20022" },
]

[tool.poetry.scripts]
ap2-iso20022-mcp = "ap2_iso20022.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = ">=1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^26.3.1"
ruff = "^0.1.0"
mypy = "^1.11.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=ap2_iso20022",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["ap2_iso20022"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@overload",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The bridge and server return bare JSON-shaped dicts built from loosely-typed
# inputs. Relax the two strict checks that trips while keeping the rest of
# strict mode in force.
module = ["ap2_iso20022.server", "ap2_iso20022.bridge"]
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]
